Add hash of editor file to editor
This will be used for writing a temp file later on, in order to
prevent things like editing the same file at once or failing to
write the file causing a loss of progress.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ keywords = ["text", "editor", "text-editor", "forge"]
 [dependencies]
 clap = "2.1.2"
 fe-rustty = { git = "https://github.com/Syntaf/fe-rustty.git" }
+rust-crypto = "^0.2"
