--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,4 +5,8 @@ version = "0.1.0"
 
 [dependencies]
 clap = "2.19.2"
-xi_rope = "0.1.0"
+error-chain = "0.7.2"
+futures = "0.1.7"
+tokio-core = "0.1.2"
+tokio-uds = "0.1.1"
+xi-rope = "0.1.0"
