Basic capn proto rpc

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,12 +1,18 @@
 [package]
 authors = ["nokaa <nokaa@cock.li>"]
+build = "build.rs"
 name = "anvil-server"
 version = "0.1.0"
 
+[build-dependencies]
+capnpc = "0.8.1"
+
 [dependencies]
+capnp = "0.8.0"
+capnp-rpc = "0.8.1"
 clap = "2.19.2"
 error-chain = "0.7.2"
-futures = "0.1.7"
-tokio-core = "0.1.2"
+futures = "0.1.9"
+tokio-core = "0.1.4"
 tokio-uds = "0.1.1"
 xi-rope = "0.1.0"
