Move client to cli-client

--- a/cli-client/Cargo.toml
+++ b/cli-client/Cargo.toml
@@ -4,4 +4,13 @@ name = "cli-client"
 version = "0.1.0"
 
 [dependencies]
+capnp = "0.8.0"
+capnp-rpc = "0.8.1"
 clap = "2.19.2"
+error-chain = "0.8.1"
+futures = "0.1.9"
+tokio-core = "0.1.4"
+tokio-uds = "0.1.1"
+
+[dependencies.anvil-server]
+path = "../server"
