--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,6 +9,7 @@ capnp-rpc = "0.8.1"
 clap = "2.19.2"
 error-chain = "0.7.2"
 futures = "0.1.9"
+nix = "0.7.0"
 tokio-core = "0.1.4"
 tokio-uds = "0.1.1"
 xi-rope = "0.1.0"
